app/assets/stylesheets/home.sass
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.container-fluid.home
  min-height: 100vh

  .row.hero
    padding: 10vh 10vw
    background-color: $color-blue
    color: white

    h1
      color: $color-pink

    h3
      font-weight: lighter

    h3.opening-date
      margin-top: 5vh
      font-weight: bold

    img
      padding-bottom: 5vh
      max-width: 180px


  .row.value
    padding: 5vh 10vw


  .row.program
    padding: 5vh 10vw

    .module
      padding: 1.25vh 0vw

  .row.admissions
    padding: 5vh 10vw 0vh 10vw

  .row.admissions-steps
    padding: 1.25vh 10vw 5vh 10vw

  .row.form
    padding: 5vh 10vw 0vh 10vw

  .row.form-sections
    padding: 1.25vh 10vw 5vh 10vw

  .row.footer
    padding: 5vh 10vw

  #registerButton
    color: white
    background-color: $color-pink
    border-color: #CC2952

